fix overlapping graphics and text on platform overview page

--- a/platform/platform.less
+++ b/platform/platform.less
@@ -563,7 +563,6 @@ h1.icon-header, h2.icon-header, h3.icon-header, h4.icon-header, h5.icon-header, 
   margin-bottom:3px;
   background-color:#ffffff;
 }
-.hiw-block .deployment-options { margin: 0 15%; }
 .hiw-block .deployment-options > [class*="col-"] {
   position: relative;
   margin-top: 20px;
@@ -573,7 +572,7 @@ h1.icon-header, h2.icon-header, h3.icon-header, h4.icon-header, h5.icon-header, 
 .hiw-block .deployment-options > [class*="col-"]:before {
   content: "";
   position: absolute;
-  top: -50%;
+  top: -20px;
   left: 50%;
   width: 1px;
   height: 20px;
@@ -1663,8 +1662,7 @@ padding-left:20px; padding-right:20px;
   .platform-diagram .line.bottom.right {width:70%;}
   .platform-diagram .line.bottom.right:before {height:330px;}
   .platform-diagram .line.bottom.right:after {width:90%; top:330px;}
-
-  .hiw-block .hiw-feature-list {margin:0 10%;}
+    
 
   /*------------component sub pages------------*/
   .gridder {padding-bottom:80px;}
@@ -1738,7 +1736,6 @@ padding-left:20px; padding-right:20px;
   .platform-diagram .line.bottom.right {width:85%;}
   .platform-diagram .line.bottom.right:before {height:310px;}
   .platform-diagram .line.bottom.right:after {top:310px;}
-  .hiw-block .hiw-feature-list {margin:0 15%;}
 
   /*------------pricing page------------*/
   .price-chart-wrapper .product {min-height:180px;}
